@@ -1,3 +1,8 @@
+2005-11-23  Vincent Noel  <vincent.noel@gmail.com>
+
+	* logrtns.c: (log_stats_reload), (log_read_new_lines): Update the
+	line count and last modification date when a log is updated.
+
 2005-11-18  Vincent Noel  <vincent.noel@gmail.com>
 
 	* calendar.c: (calendar_mark_dates), (log_find_day):
